--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-description: "Ray's technology blog"
+description: "Technology, Ideation, Startup"
 ---
 
 {% for post in paginator.posts %}
